자체 서버 호스팅 세팅 세부 변경 deploy.env 설정 변경

--- a/.github/config/deploy.env
+++ b/.github/config/deploy.env
@@ -3,14 +3,14 @@
 # ===================================================================
 
 # 🏷️ 프로젝트 기본 정보
-PROJECT_NAME=tripgether-python
+PROJECT_NAME=c-fit-parse
 
 # 🏠 서버 경로 설정
 PROJECT_BASE_PATH=/home/catuscio/workspace
-PROJECT_FOLDER_NAME=tripgether
-PROJECT_SUB_PATH=python
+PROJECT_FOLDER_NAME=c-fit
+PROJECT_SUB_PATH=parse
 
 # 🌐 포트 설정
-PRODUCTION_PORT=8000
-DEVELOPMENT_PORT=8001
+# PRODUCTION_PORT=8000
+# DEVELOPMENT_PORT=8001
 TEST_PORT=8002
